[package]
name = "yew-bootsrap-modal-example"
version = "0.1.0"
authors = ["Barlog <barlog@tanelorn.li>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wee_alloc = "0.4"

log = "0.4"
wasm-logger = "0.2"

console_error_panic_hook = "0.1"

wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"

yew = "0.17"

[dependencies.web-sys]
version = "0.3"
features = [
    'Document',
    'Element',
    'HtmlElement',
    'Node',
    'Window',
]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
lto = true
opt-level = 'z'
panic = 'abort'
